# quant_trade

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  DOCKER_ENV_SETUP.md  Dockerfile  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_PHASE2.md  Makefile  OPERATIONAL_TOOLS.md  OPERATIONAL_TOOLS_SUMMARY.md  QUICK_START.md  README.md  config.yaml  docker-compose.yml  fix_markdown.py  integration_test_output.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  MULTI_PAIR_PORTFOLIO.md  conf.py  index.rst
docs/ADRs/: ADR-001-limit-orders-only.md  ADR-002-ratchet-only-stops.md  ADR-003-sqlite-persistence.md  ADR-004-sync-async-dual.md  ADR-005-decimal-precision.md  ADR-006-config-driven-strategy.md  README.md
docs/api/: trading.rst
examples/: config.aggressive.yaml  config.conservative.yaml  config.example.yaml  config.paper.yaml  demo_multi_pair.py  demo_trader.py
scripts/: migrate.py  order_manager.py  portfolio_dashboard.py  position_status.py  run-tests.sh  setup-dev.sh  trade_history.py
tests/: test_async_coinbase_adapter.py  test_async_event_loop.py  test_async_execution_engine.py  test_coinbase_adapter.py  test_db_migrations.py  test_execution_engine.py  test_migrate_cli.py  test_migration_chains.py  test_operational_tools.py  test_operational_tools_integration.py  test_order_state_machine.py  test_persistence_sqlite.py  test_persistence_sqlite_multi.py  test_portfolio_manager.py  test_rate_limit_policy.py  test_reconciliation.py  test_secrets.py  test_trailing_ratchet.py
trading/: __init__.py  async_coinbase_adapter.py  async_event_loop.py  async_execution.py  backtest.py  coinbase_adapter.py  config.py  db_encryption.py  db_migrations.py  execution.py  logging_setup.py  order_state.py  persistence_sqlite.py  pnl.py  portfolio_manager.py  portfolio_orchestrator.py  position.py  rate_limit_policy.py  secrets.py  ws_client.py
web/: gui_server.py
web/static/: app.js  index.html
